# cobalt

./: .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  README.md  SYSROOT.md  build.sh  clearcut_extensions.proto  cobalt.ensure  cobalt.proto  cobalt.py  cobalt_config_header.gni  cobaltb.py  encodings.proto  encrypted_message.proto  gtest.h  logging.h  metrics.proto  observation.proto  payload.proto  report.proto  self-signed-with-ip.cnf  setup.sh
algorithms/forculus/: BUILD.gn  CMakeLists.txt  field_element.cc  field_element.h  field_element_test.cc  forculus.py  forculus_analyzer.cc  forculus_analyzer.h  forculus_analyzer_test.cc  forculus_decrypter.cc  forculus_decrypter.h  forculus_decrypter_test.cc  forculus_encrypter.cc  forculus_encrypter.h  forculus_encrypter_decrypter_test.cc  forculus_encrypter_test.cc  forculus_performance_test.cc  forculus_utils.cc  forculus_utils.h  polynomial_computation_test.cc  polynomial_computations.cc  polynomial_computations.h  word_counts.txt
algorithms/rappor/: BUILD.gn  CMakeLists.txt  basic_rappor_analyzer.cc  basic_rappor_analyzer.h  basic_rappor_analyzer_test.cc  bloom_bit_counter.cc  bloom_bit_counter.h  bloom_bit_counter_test.cc  decode_assoc_averages.R  rappor_analyzer.cc  rappor_analyzer.h  rappor_analyzer_test.cc  rappor_config_validator.cc  rappor_config_validator.h  rappor_encoder.cc  rappor_encoder.h  rappor_encoder_test.cc  rappor_test_utils.cc  rappor_test_utils.h  rappor_test_utils_test.cc  sum_bits.py
analyzer/: CMakeLists.txt  analyzer.cc  analyzer.h  analyzer.proto  analyzer_service.cc  analyzer_service.h  analyzer_service_test.cc  analyzer_test.cc  encoding_mixer.cc  encoding_mixer.h  encoding_mixer_test.cc  main.cc  report_generator.cc  report_generator.h  report_generator_abstract_test.h  report_generator_cloud_test.cc  report_generator_emulator_test.cc  report_generator_test.cc  report_master.cc  report_master.h  reporter.cc  reporter.h  schema.proto
analyzer/analyzer_service/: CMakeLists.txt  analyzer.proto  analyzer_service.cc  analyzer_service.h  analyzer_service_test.cc  main.cc
analyzer/report_master/: CMakeLists.txt  auth_enforcer.cc  auth_enforcer.h  auth_enforcer_test.cc  encoding_mixer.cc  encoding_mixer.h  encoding_mixer_test.cc  histogram_analysis_engine.cc  histogram_analysis_engine.h  histogram_analysis_engine_test.cc  main.cc  raw_dump_reports.cc  raw_dump_reports.h  raw_dump_reports_test.cc  report_executor.cc  report_executor.h  report_executor_abstract_test.h  report_executor_cloud_test.cc  report_executor_emulator_test.cc  report_executor_test.cc  report_exporter.cc  report_exporter.h  report_exporter_test.cc  report_generator.cc  report_generator.h  report_generator_abstract_test.h  report_generator_cloud_test.cc  report_generator_emulator_test.cc  report_generator_test.cc  report_history_cache.cc  report_history_cache.h  report_history_cache_test.cc  report_internal.proto  report_master.proto  report_master_service.cc  report_master_service.h  report_master_service_abstract_test.h  report_master_service_cloud_test.cc  report_master_service_emulator_test.cc  report_master_service_test.cc  (+15 more)
analyzer/store/: CMakeLists.txt  bigtable_admin.cc  bigtable_admin.h  bigtable_cloud_helper.h  bigtable_emulator_helper.h  bigtable_flags.cc  bigtable_flags.h  bigtable_names.h  bigtable_store.cc  bigtable_store.h  bigtable_store_cloud_test.cc  bigtable_store_emulator_test.cc  bigtable_store_old.cc  bigtable_store_old.h  data_store.cc  data_store.h  data_store_test.h  mem_store.cc  mem_store.h  memory_store.cc  memory_store.h  memory_store_test.cc  memory_store_test_helper.h  observation_store.cc  observation_store.h  observation_store_abstract_test.h  observation_store_cloud_test.cc  observation_store_emulator_test.cc  observation_store_internal.h  observation_store_test.cc  report_store.cc  report_store.h  report_store_abstract_test.h  report_store_cloud_test.cc  report_store_emulator_test.cc  report_store_test.cc  report_store_test_utils.cc  report_store_test_utils.h  store.cc  store.h
client/: CMakeLists.txt  metrics.cc  metrics.h  metrics_test.cc  observation.h  observations_collector.cc  observations_collector.h  observations_collector_test.cc
client/collection/: observation.h  observations_collector.cc  observations_collector.h  observations_collector_test.cc
config/: BUILD.gn  CMakeLists.txt  analyzer_config.cc  analyzer_config.h  analyzer_config_manager.cc  analyzer_config_manager.h  analyzer_config_test.cc  buckets_config.cc  buckets_config.h  buckets_config_test.cc  client_config.cc  client_config.h  client_config_test.cc  config.cc  config.h  config.proto  config_gen.cc  config_test.cc  config_text_parser.h  encoding_config.h  encodings.proto  metric_config.h  metrics.proto  report_config.h  report_configs.proto
encoder/: BUILD.gn  CMakeLists.txt  client_secret.cc  client_secret.h  client_secret_test.cc  clock.h  encoder.cc  encoder.h  encoder_test.cc  encoder_test_config.yaml  envelope_maker.cc  envelope_maker.h  envelope_maker_test.cc  envelope_maker_test_config.yaml  memory_observation_store.cc  memory_observation_store.h  observation_store.cc  observation_store.h  observation_store_dispatcher.cc  observation_store_dispatcher.h  project_context.cc  project_context.h  send_retryer.cc  send_retryer.h  send_retryer_test.cc  shipping_dispatcher.cc  shipping_dispatcher.h  shipping_dispatcher_test.cc  shipping_dispatcher_test_config.yaml  shipping_manager.cc  shipping_manager.h  shipping_manager_test.cc  shipping_manager_test_config.yaml  shuffler_client.cc  shuffler_client.h  shuffler_client_test.cc  system_data.cc  system_data.h  system_data_test.cc
functional_tests/: CMakeLists.txt  README
shuffler/: BUILD.gn  CMakeLists.txt  config.proto  main.go  shuffler.go  shuffler.proto  shuffler_db.proto  shuffler_test.go
util/: BUILD.gn  CMakeLists.txt  clock.h  datetime_util.cc  datetime_util.h  datetime_util_test.cc  encrypted_message_util.cc  encrypted_message_util.h  encrypted_message_util_test.cc  log_based_metrics.h  pem_util.cc  pem_util.h  status.cc  status.h  status_codes.h
(+274 files in other folders)
