# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/protobuf/proto_library.gni")

config("cobalt_config") {
  include_dirs = [
    "//cobalt",
    "$root_gen_dir/cobalt",
  ]
}

proto_library("cobalt_proto") {
  sources = [
    "encrypted_message.proto",
    "observation.proto",
  ]
  import_dirs = [ "//third_party/protobuf/src" ]
  generate_python = false
  cc_generator_options = "lite"
}
